--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -148,6 +148,7 @@
 						<a href="https://www.dixidixi.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.dixidixi.com/favicon.ico" loading="lazy"><h6 class="t1">滴嘻滴嘻</h6></a>
 						<a href="https://www.ysgc.cc/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.ysgc.cc/favicon.ico" loading="lazy"><h6 class="t1">影视工场</h6></a>
 						<a href="https://www.555dianying.cc/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.555dianying.cc/favicon.ico" loading="lazy"><h6 class="t1">555电影</h6></a>
+						<a href="https://baofa-hotel.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://baofa-hotel.cn/favicon.ico" loading="lazy"><h6 class="t1">看吧影院</h6></a>
 					</div>
 			</div>
 
@@ -319,6 +320,11 @@
 		{
 			uptime1.style.color = 'red';
 			uptime1.innerHTML= 'This version is old';
+		}
+		else if(loca_bat > git_bat)
+		{
+			uptime1.style.color = 'green';
+			uptime1.innerHTML= 'Please upload a new version to the server!!!';
 		}
 		</script>
 
