--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -36,6 +36,8 @@
 			<div class="mt-3 mx-3">
 				<div class="alert alert-secondary shadow" role="alert">工具</div>
 					<div class="d-flex flex-wrap p-2">
+						<a href="https://wx.qq.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://wx.qq.com/favicon.ico" loading="lazy"><h6 class="t1">微信网页版</h6></a>
+						<a href="https://szfilehelper.weixin.qq.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://szfilehelper.weixin.qq.com/favicon.ico" loading="lazy"><h6 class="t1">微信传输</h6></a>
 						<a href="https://baidu.kinh.cc/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://cdn.u1.huluxia.com/g4/M03/D0/7B/rBAAdmFqkm6AGap8AAAPm8eQKuo720.png" loading="lazy"><h6 class="t1">百度直链</h6></a>
 						<a href="https://www.kuaidi100.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.kuaidi100.com/favicon.ico" loading="lazy"><h6 class="t1">快递100</h6></a>
 						<a href="https://brevent.sh/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://brevent.sh/favicon.ico" loading="lazy"><h6 class="t1">黑域</h6></a>
