--- a/demo/index/dd.html
+++ b/demo/index/dd.html
@@ -23,6 +23,12 @@
 				<div class="alert alert-secondary shadow" role="alert">平台</div>
 					<div class="d-flex flex-column align-items-start p-2">
 						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://sumingyd.github.io/OpenCore-Install-Guide/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">OpenCore的安装指南</h6></a>
+						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
 						
 						
 					</div>
