--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -79,7 +79,7 @@
 						<a href="https://www.aconvert.com/cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.aconvert.com/cn/favicon.ico" loading="lazy"><h6 class="t1">aconvert</h6></a>
 						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
 						<a href="https://modelscope.cn/studios/damo/ai_artist/summary?from=baidu_sem" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://modelscope.cn/favicon.ico" loading="lazy"><h6 class="t1">ai绘画</h6></a>
-						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
+						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
 						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
 					</div>
 			</div>
@@ -221,7 +221,7 @@
 				<div class="alert alert-secondary shadow" role="alert">论坛</div>
 					<div class="d-flex flex-wrap p-2">
 						<a href="https://dkxuanye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://dkxuanye.cn/favicon.ico" loading="lazy"><h6 class="t1">玄烨品果</h6></a>
-						<a href="https://www.imomoe.in/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.imomoe.in/favicon.ico" loading="lazy"><h6 class="t1">樱花动漫</h6></a>
+						<a href="https://bbs.pcbeta.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bbs.pcbeta.com/favicon.ico" loading="lazy"><h6 class="t1">远景论坛</h6></a>
 						<a href="https://v.qq.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://v.qq.com/favicon.ico" loading="lazy"><h6 class="t1">腾讯视频</h6></a>
 						<a href="https://www.iqiyi.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.iqiyi.com/favicon.ico" loading="lazy"><h6 class="t1">爱奇艺</h6></a>
 						<a href="https://www.taobao.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.taobao.com/favicon.ico" loading="lazy"><h6 class="t1">淘宝</h6></a>
