--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -177,9 +177,9 @@
 					<div class="d-flex flex-wrap p-2">
 						<a href="https://www.coolzhanweb.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.coolzhanweb.com/favicon.ico" loading="lazy"><h6 class="t1">酷站导航</h6></a>
 						<a href="https://movie.coolzhanweb.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://movie.coolzhanweb.com/favicon.ico" loading="lazy"><h6 class="t1">电影导航</h6></a>
-						<a href="http://clb0.top/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://clb0.top/favicon.ico" loading="lazy"><h6 class="t1">磁力宝</h6></a>
-						<a href="http://clg0.biz/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://clg0.biz/favicon.ico" loading="lazy"><h6 class="t1">磁力狗</h6></a>
-						<a href="https://www.cilitiantang.online/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.cilitiantang.online/favicon.ico" loading="lazy"><h6 class="t1">磁力天堂</h6></a>
+						<a href="http://ltzhp.ysepan.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://ltzhp.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">辣条杂货铺</h6></a>
+						<a href="http://bileizhen.ysepan.com/?xzpd=1" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://bileizhen.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">bileizhen的收纳箱</h6></a>
+						<a href="https://qxnav.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://qxnav.com/favicon.ico" loading="lazy"><h6 class="t1">奇心导航</h6></a>
 						<a href="http://www.eclzz.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.eclzz.info/favicon.ico" loading="lazy"><h6 class="t1">磁力蜘蛛 </h6></a>
 						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 					</div>
@@ -198,7 +198,7 @@
 						<a href="https://www.uxpc.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.uxpc.com/favicon.ico" loading="lazy"><h6 class="t1">精脑汇</h6></a>
 						<a href="https://www.wrfou.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.wrfou.com/favicon.ico" loading="lazy"><h6 class="t1">挖软否</h6></a>
 						<a href="https://www.kelongwo.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.kelongwo.com/favicon.ico" loading="lazy"><h6 class="t1">克隆窝</h6></a>
-						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
+						<a href="http://niumaizi.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://niumaizi.cn/favicon.ico" loading="lazy"><h6 class="t1">牛麦子</h6></a>
 						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 					</div>
 			</div>
