--- a/demo/index.html
+++ b/demo/index.html
@@ -7,8 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="favicon.ico" loading="lazy">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	<!-- <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/search-form.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
@@ -182,7 +184,7 @@
 
 </script>
 
-	<div id="uptime2" style="display: none;">20230301</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230316</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 			
