--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -7,8 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+	<!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
+	<!-- <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
@@ -26,6 +28,10 @@
 				<a href="https://xiaolanqqai.lanzous.com/b01zx4syb" class="badge badge-light">Website update address (code:xiaolan)</a>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
+				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha1</h5>
+				<h5 class="alert-heading">JQuery_v3.5.1</h5>
+				<h5 class="alert-heading">Particles_v2.2.3</h5>
+				<hr class="my-2">
 				<h4 class="alert-heading">BETA 3.4.2<span class="badge badge-danger">New</span></h4>
 				<h6 class="float-end">2022-12-20</h6>
 				<p>The framework updated to BOOSTRAP_v5.2.3</p>
@@ -131,7 +137,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">20230301</div>
+	<div id="uptime2" style="display: none;">20230316</div>
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 			
