--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -182,7 +182,7 @@
 						<a href="http://ltzhp.ysepan.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://ltzhp.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">辣条杂货铺</h6></a>
 						<a href="http://bileizhen.ysepan.com/?xzpd=1" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://bileizhen.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">bileizhen的收纳箱</h6></a>
 						<a href="https://qxnav.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://qxnav.com/favicon.ico" loading="lazy"><h6 class="t1">奇心导航</h6></a>
-						<a href="http://www.eclzz.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.eclzz.info/favicon.ico" loading="lazy"><h6 class="t1">磁力蜘蛛 </h6></a>
+						<a href="http://ago.ysepan.com/?xzpd=1" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://ago.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">👪怸歪的网盘🔞</h6></a>
 						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 					</div>
 			</div>
