--- a/demo/index.html
+++ b/demo/index.html
@@ -66,7 +66,7 @@
 			</div>
 			<div class="nav-ban" style="display: none;">
 				<div class="row row-cols-4 p-2">
-					<a href="https://translate.google.cn" rel="nofollow" target="_blank" class="col my-2 p-1 text-center text-black-50 kuaijie-a"><img class="border rounded-circle w" src="https://translate.google.cn/favicon.ico" loading="lazy"><h6 class="t1">谷歌翻译</h6></a>
+					<a href="https://fanyi.baidu.com/" rel="nofollow" target="_blank" class="col my-2 p-1 text-center text-black-50 kuaijie-a"><img class="border rounded-circle w" src="https://fanyi.baidu.com/favicon.ico" loading="lazy"><h6 class="t1">百度翻译</h6></a>
 					<a href="https://pan.baidu.com/" rel="nofollow" target="_blank" class="col my-2 p-1 text-center text-black-50 kuaijie-a"><img class="border rounded-circle w" src="https://pan.baidu.com/static/images/favicon.ico" loading="lazy"><h6 class="t1">百度网盘</h6></a>
 					<a href="https://mail.163.com" rel="nofollow" target="_blank" class="col my-2 p-1 text-center text-black-50 kuaijie-a"><img class="border rounded-circle w" src="https://mail.163.com/favicon.ico" loading="lazy"><h6 class="t1">163</h6></a>
 					<a href="https://tinypng.com/" rel="nofollow" target="_blank" class="col my-2 p-1 text-center text-black-50 kuaijie-a"><img class="border rounded-circle w" src="https://tinypng.com/images/favicon.ico" loading="lazy"><h6>TinyPNG</h6></a>
