--- a/demo/index/dd.html
+++ b/demo/index/dd.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Xiaolan</title>
 		<link rel="Shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 		<!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
 		<!-- <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script> -->
@@ -28,7 +28,7 @@
 						<a href="https://sumingyd.github.io/OpenCore-Install-Guide/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">OpenCore的安装指南</h6></a>
 						<a href="https://lfoo.top/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">Domon网络资源聚合</h6></a>
 						<a href="https://zhuangzhuang.io/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">壮壮博客</h6></a>
-						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://189.zheng98.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://189.zheng98.com/favicon.ico" loading="lazy"><h6 class="t2">adobe下载</h6></a>
 						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
 						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
 						
