--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -201,6 +201,9 @@
 						<a href="https://www.wrfou.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.wrfou.com/favicon.ico" loading="lazy"><h6 class="t1">挖软否</h6></a>
 						<a href="https://www.kelongwo.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.kelongwo.com/favicon.ico" loading="lazy"><h6 class="t1">克隆窝</h6></a>
 						<a href="http://niumaizi.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://niumaizi.cn/favicon.ico" loading="lazy"><h6 class="t1">牛麦子</h6></a>
+						<a href="https://www.zdfans.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.zdfans.com/favicon.ico" loading="lazy"><h6 class="t1">ZD423</h6></a>
+						<a href="https://www.pc6.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.pc6.com/favicon.ico" loading="lazy"><h6 class="t1">PC6</h6></a>
+						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 					</div>
 			</div>
@@ -224,7 +227,7 @@
 					<div class="d-flex flex-wrap p-2">
 						<a href="https://dkxuanye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://dkxuanye.cn/favicon.ico" loading="lazy"><h6 class="t1">玄烨品果</h6></a>
 						<a href="https://bbs.pcbeta.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bbs.pcbeta.com/favicon.ico" loading="lazy"><h6 class="t1">远景论坛</h6></a>
-						<a href="https://v.qq.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://v.qq.com/favicon.ico" loading="lazy"><h6 class="t1">腾讯视频</h6></a>
+						<a href="https://bbs.kafan.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bbs.kafan.cn/favicon.ico" loading="lazy"><h6 class="t1">卡饭论坛</h6></a>
 						<a href="https://www.iqiyi.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.iqiyi.com/favicon.ico" loading="lazy"><h6 class="t1">爱奇艺</h6></a>
 						<a href="https://www.taobao.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.taobao.com/favicon.ico" loading="lazy"><h6 class="t1">淘宝</h6></a>
 						<a href="https://www.jd.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t1">京东</h6></a>
@@ -274,6 +277,7 @@
 				// if (code == 13) {
 				// 	jav();
 				// }
+
 			
 			};
 		</script>
