--- a/demo/index/dd.html
+++ b/demo/index/dd.html
@@ -29,8 +29,8 @@
 						<a href="https://lfoo.top/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">Domon网络资源聚合</h6></a>
 						<a href="https://zhuangzhuang.io/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">壮壮博客</h6></a>
 						<a href="https://189.zheng98.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://189.zheng98.com/favicon.ico" loading="lazy"><h6 class="t2">adobe下载</h6></a>
-						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
-						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
+						<a href="https://flowery-espadrille-695.notion.site/7e52fb27108d4b7099aa6245a4d1d9eb" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">应用集导航</h6></a>
+						<a href="https://orangefox.download/zh-CN/device/dipper" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">小米8第三方twrp</h6></a>
 						
 						
 					</div>
