--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -9,6 +9,7 @@
 		<link rel="Shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
 		<!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
 		<!-- <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script> -->
 		<link rel="stylesheet" type="text/css" href="../css/index.css"/>
@@ -203,7 +204,7 @@
 						<a href="http://niumaizi.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://niumaizi.cn/favicon.ico" loading="lazy"><h6 class="t1">牛麦子</h6></a>
 						<a href="https://www.zdfans.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.zdfans.com/favicon.ico" loading="lazy"><h6 class="t1">ZD423</h6></a>
 						<a href="https://www.pc6.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.pc6.com/favicon.ico" loading="lazy"><h6 class="t1">PC6</h6></a>
-						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
+						<a href="https://www.ittel.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.ittel.cn/favicon.ico" loading="lazy"><h6 class="t1">IT技术之家</h6></a>
 						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
 					</div>
 			</div>
