--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -224,6 +224,20 @@
 
 
 			<div class="mt-3 mx-3">
+				<div class="alert alert-secondary shadow" role="alert">树莓派 • 开发</div>
+					<div class="d-flex flex-wrap p-2">
+						<a href="https://shumeipai.nxez.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://shumeipai.nxez.com/favicon.ico" loading="lazy"><h6 class="t1">树莓派实验室</h6></a>
+						<a href="http://sscms.com/docs/v7/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://sscms.com/docs/v7/favicon.ico" loading="lazy"><h6 class="t1">SSCMS</h6></a>
+						<a href="https://www.ghxi.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.ghxi.com/favicon.ico" loading="lazy"><h6 class="t1">果壳剥壳</h6></a>
+						<a href="http://www.yxssp.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.yxssp.com/favicon.ico" loading="lazy"><h6 class="t1">异星软件</h6></a>
+						<a href="https://msdn.itellyou.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://msdn.itellyou.cn/favicon.ico" loading="lazy"><h6 class="t1">msdn</h6></a>
+						<a href="http://www.eclzz.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.eclzz.info/favicon.ico" loading="lazy"><h6 class="t1">磁力蜘蛛 </h6></a>
+						
+					</div>
+			</div>
+
+
+			<div class="mt-3 mx-3">
 				<div class="alert alert-secondary shadow" role="alert">论坛</div>
 					<div class="d-flex flex-wrap p-2">
 						<a href="https://dkxuanye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://dkxuanye.cn/favicon.ico" loading="lazy"><h6 class="t1">玄烨品果</h6></a>
