--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 	<head>
 		<meta charset="utf-8" />
@@ -50,7 +50,6 @@
 						<a href="https://map.baidu.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://map.baidu.com/favicon.ico" loading="lazy"><h6 class="t1">百度地图</h6></a>
 						<a href="https://www.amap.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.amap.com/favicon.ico" loading="lazy"><h6 class="t1">高德地图</h6></a>
                         <a href="https://docs.qq.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://docs.qq.com/favicon.ico" loading="lazy"><h6 class="t1">腾讯文档</h6></a>
-                        <a href="https://www.ilovepdf.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.ilovepdf.com/img/favicons-pdf/favicon-32x32.png" loading="lazy"><h6 class="t1">ilovepdf</h6></a>
 						<a href="https://yandex.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://yandex.com/favicon.ico" loading="lazy"><h6 class="t1">yandex识图</h6></a>
 						<a href="https://trace.moe/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://trace.moe/favicon.ico" loading="lazy"><h6 class="t1">动漫识图</h6></a>
 						<a href="https://yiso.fun/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://yiso.fun/favicon.ico" loading="lazy"><h6 class="t1">易搜</h6></a>
@@ -65,6 +64,9 @@
 				<div class="alert alert-secondary shadow" role="alert">专业工具</div>
 					<div class="d-flex flex-wrap p-2">
                         <a href="https://tinypng.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://tinypng.com/images/favicon.ico" loading="lazy"><h6 class="t1">TinyPNG</h6></a>
+						<a href="https://www.ilovepdf.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.ilovepdf.com/img/favicons-pdf/favicon-32x32.png" loading="lazy"><h6 class="t1">ilovepdf</h6></a>
+						<a href="https://tool.browser.qq.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://tool.browser.qq.com/favicon.ico" loading="lazy"><h6 class="t1">帮小忙</h6></a>
+						<a href="https://123apps.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://123apps.com/favicon.ico" loading="lazy"><h6 class="t1">123apps</h6></a>
 						<a href="https://www.polaxiong.com/web/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.polaxiong.com/web/favicon.ico" loading="lazy"><h6 class="t1">泼辣修图</h6></a>
 						<a href="https://www.gaituya.com/ps/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.gaituya.com/ps/favicon.ico" loading="lazy"><h6 class="t1">改图鸭</h6></a>
 						<a href="https://pixlr.com/cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://pixlr.com/favicon.ico" loading="lazy"><h6 class="t1">Pixlr</h6></a>
@@ -83,7 +85,7 @@
 						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
 						<a href="https://modelscope.cn/studios/damo/ai_artist/summary?from=baidu_sem" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://modelscope.cn/favicon.ico" loading="lazy"><h6 class="t1">ai绘画</h6></a>
 						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
-						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
+						
 					</div>
 			</div>
 
@@ -205,7 +207,7 @@
 						<a href="https://www.zdfans.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.zdfans.com/favicon.ico" loading="lazy"><h6 class="t1">ZD423</h6></a>
 						<a href="https://www.pc6.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.pc6.com/favicon.ico" loading="lazy"><h6 class="t1">PC6</h6></a>
 						<a href="https://www.ittel.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.ittel.cn/favicon.ico" loading="lazy"><h6 class="t1">IT技术之家</h6></a>
-						<a href="https://www.tokyotosho.info/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.tokyotosho.info/favicon.ico" loading="lazy"><h6 class="t1">东京图书馆</h6></a>
+						<a href="https://www.mimods.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.mimods.com/favicon.ico" loading="lazy"><h6 class="t1">MOD迷</h6></a>
 					</div>
 			</div>
 
