--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -266,6 +266,7 @@
 						<a href="https://dkxuanye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://dkxuanye.cn/favicon.ico" loading="lazy"><h6 class="t1">玄烨品果</h6></a>
 						<a href="https://bbs.pcbeta.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bbs.pcbeta.com/favicon.ico" loading="lazy"><h6 class="t1">远景论坛</h6></a>
 						<a href="https://bbs.kafan.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bbs.kafan.cn/favicon.ico" loading="lazy"><h6 class="t1">卡饭论坛</h6></a>
+						<a href="https://www.chiphell.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.chiphell.com/favicon.ico" loading="lazy"><h6 class="t1">chiphell</h6></a>
 						
 					</div>
 			</div>
