--- a/demo/index/dd.html
+++ b/demo/index/dd.html
@@ -31,8 +31,12 @@
 						<a href="https://189.zheng98.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://189.zheng98.com/favicon.ico" loading="lazy"><h6 class="t2">adobe下载</h6></a>
 						<a href="https://flowery-espadrille-695.notion.site/7e52fb27108d4b7099aa6245a4d1d9eb" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">应用集导航</h6></a>
 						<a href="https://orangefox.download/zh-CN/device/dipper" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">小米8第三方twrp</h6></a>
-						
-						
+						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
+						<a href="https://github.com/aiboboxx/v2rayfree" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">免费节点</h6></a>
+						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
+						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
+						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
+						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
 					</div>
 			</div>
 
